--- a/www/index.html
+++ b/www/index.html
@@ -25,10 +25,25 @@
 
     <ion-pane>
       <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
+        <h1 class="title">Rentee</h1>
       </ion-header-bar>
       <ion-content>
-        <img src="img/Toilet Bowl-50.png"/>
+        <div class="list">
+          <label class="item item-input">
+            <span class="input-label">Username:</span>
+            <input type="text">
+<!-- type brings up the specific keyboard box(username,telephone,email,search,number,date,month,password) -->
+          </label>
+          <label class="item item-input">
+            <span class="input-label">Password:</span>
+            <input type="password">
+<!-- type brings up the specific keyboard box(username,telephone,email,search,number,date,month,password) -->
+          </label>
+        </div>
+        <div>
+          <button type="button">Sign in</button>
+        </div>
+
       </ion-content>
     </ion-pane>
   </body>
