--- a/www/register.html
+++ b/www/register.html
@@ -30,18 +30,33 @@
       <ion-content>
         <div class="list">
           <label class="item item-input">
-            <span class="input-label">Username:</span>
+            <span class="input-label">Forename:</span>
             <input type="text">
-<!-- type brings up the specific keyboard box(username,telephone,email,search,number,date,month,password) -->
+          </label>
+          <label class="item item-input">
+            <span class="input-label">Surname:</span>
+            <input type="text">
+          </label>
+          <label class="item item-input">
+            <span class="input-label">Email:</span>
+            <input type="email">
+          </label>
+          <label class="item item-input">
+            <span class="input-label">Mobile number:</span>
+            <input type="tel">
           </label>
           <label class="item item-input">
             <span class="input-label">Password:</span>
             <input type="password">
-<!-- type brings up the specific keyboard box(username,telephone,email,search,number,date,month,password) -->
           </label>
-        </div>
-        <div>
-          <button type="button">Sign in</button>
+          <label class="item item-input">
+            <span class="input-label">Confirm Password:</span>
+            <input type="password">
+          </label>
+          <label class="item item-input">
+            <span class="input-label">Profile Picture:</span>
+            <input type="image">
+          </label>
         </div>
         <div>
           <button type="button">Register</button>
