slider for tenant/landlord

--- a/www/register.html
+++ b/www/register.html
@@ -29,6 +29,11 @@
       </ion-header-bar>
       <ion-content>
         <div class="list">
+          <div class="item range">
+            <i class="ion-person"></i> <!--image tenant-->
+             <input type="range" min="0" max="1" name="account">
+            <i class="ion-android-home"></i> <!--image landlord-->
+          </div>
           <label class="item item-input">
             <span class="input-label">Forename:</span>
             <input type="text">
