--- a/www/index.html
+++ b/www/index.html
@@ -17,36 +17,29 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+    <script src="lib/angular-cookie/angular-cookie.js"></script>
+    <script src="lib/ng-token-auth/dist/ng-token-auth.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/RegisterCtrl.js"></script>
+    <script src="js/LoginCtrl.js"></script>
   </head>
-  <body ng-app="starter">
+  <body ng-app="rentee">
 
     <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Rentee</h1>
-      </ion-header-bar>
-      <ion-content>
-        <div class="list">
-          <label class="item item-input">
-            <span class="input-label">Username:</span>
-            <input type="text">
-<!-- type brings up the specific keyboard box(username,telephone,email,search,number,date,month,password) -->
-          </label>
-          <label class="item item-input">
-            <span class="input-label">Password:</span>
-            <input type="password">
-<!-- type brings up the specific keyboard box(username,telephone,email,search,number,date,month,password) -->
-          </label>
-        </div>
-        <div>
-          <button type="button">Sign in</button>
-        </div>
-        <div>
-          <button type="button">Register</button>
-        </div>
-      </ion-content>
+      <!-- Page header -->
+      <ion-nav-bar class="bar-stable">
+        <h1>Rentee</h1>
+        <ion-nav-back-button>
+        </ion-nav-back-button>
+      </ion-nav-bar>
+
+      <ion-nav-view>
+        <!-- Page content will go here -->
+      </ion-nav-view>
+
     </ion-pane>
+
   </body>
 </html>
