--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,8 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/RegisterCtrl.js"></script>
+    <script src="js/TenantRegisterCtrl.js"></script>
+    <script src="js/LandlordRegisterCtrl.js"></script>
     <script src="js/LoginCtrl.js"></script>
   </head>
   <body ng-app="rentee">
