--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
     <script src="js/app.js"></script>
     <script src="js/TenantRegisterCtrl.js"></script>
     <script src="js/LandlordRegisterCtrl.js"></script>
+    <script src="js/TenantProfileCtrl.js"></script>
     <script src="js/LoginCtrl.js"></script>
   </head>
   <body ng-app="rentee">
