pushed working landlord profile

--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,7 @@
     <script src="js/TenantRegisterCtrl.js"></script>
     <script src="js/LandlordRegisterCtrl.js"></script>
     <script src="js/TenantProfileCtrl.js"></script>
+    <script src="js/LandlordProfileCtrl.js"></script>
     <script src="js/LoginCtrl.js"></script>
   </head>
   <body ng-app="rentee">
