add button works-kinda

--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
     <script src="js/LandlordRegisterCtrl.js"></script>
     <script src="js/TenantProfileCtrl.js"></script>
     <script src="js/LandlordProfileCtrl.js"></script>
+    <script src="js/PropertyRegisterCtrl.js"></script>
     <script src="js/LoginCtrl.js"></script>
   </head>
   <body ng-app="rentee">
