--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-
+    <link href ="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel ="stylesheet">
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
@@ -26,6 +26,7 @@
     <script src="js/LandlordRegisterCtrl.js"></script>
     <script src="js/TenantProfileCtrl.js"></script>
     <script src="js/LandlordProfileCtrl.js"></script>
+    <script src="js/LandlordEditProfileCtrl.js"></script>
     <script src="js/PropertyRegisterCtrl.js"></script>
     <script src="js/LoginCtrl.js"></script>
   </head>
