search settings page changes and property register radio buttons added

--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/TenantRegisterCtrl.js"></script>
+    <script src="js/SearchSettingsCtrl.js"></script>
     <script src="js/LandlordRegisterCtrl.js"></script>
     <script src="js/TenantProfileCtrl.js"></script>
     <script src="js/LandlordProfileCtrl.js"></script>
