added tab navigation (in progress, not fully working), edited tenant-profile, added tenantMatchesCtrl (in progress)

--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
     <script src="js/SearchSettingsCtrl.js"></script>
     <script src="js/LandlordRegisterCtrl.js"></script>
     <script src="js/TenantProfileCtrl.js"></script>
+    <script src="js/TenantMatchesCtrl.js"></script>
     <script src="js/LandlordProfileCtrl.js"></script>
     <script src="js/LandlordEditProfileCtrl.js"></script>
     <script src="js/PropertyRegisterCtrl.js"></script>
@@ -36,7 +37,7 @@
     <ion-pane>
       <!-- Page header -->
       <ion-nav-bar class="bar-stable">
-        <h1>Rentee</h1>
+<!--         <h1>Rentee</h1> -->
         <ion-nav-back-button>
         </ion-nav-back-button>
       </ion-nav-bar>
@@ -45,6 +46,17 @@
         <!-- Page content will go here -->
       </ion-nav-view>
 
+
+      <!-- <ion-tabs class="tabs-positive tabs-icon-top" ng-hide="$root.hideTabs">
+        <ion-tab title="Profile" icon="ion-person" ui-sref="tenant-profile">
+        </ion-tab>
+        <ion-tab title="Search" icon="ion-search" ui-sref ="search-settings">
+        </ion-tab>
+        <ion-tab title="Properties" icon="ion-home" ui-sref="tenant-matches">
+        </ion-tab>
+        <ion-tab title="Matches" icon="ion-person-stalker">
+        </ion-tab>
+      </ion-tabs> -->
     </ion-pane>
 
   </body>
