--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/PropertyProfileCtrl.js"></script>
     <script src="js/TenantRegisterCtrl.js"></script>
     <script src="js/SearchSettingsCtrl.js"></script>
     <script src="js/LandlordRegisterCtrl.js"></script>
